Compiler/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARITH_OP
    AT
    BREAK
    CASE
    COMMENT
    ELSE
    EQUAL
    False
    GREATER_THAN
    GREATER_THAN_EQUAL
    LESS_THAN
    LESS_THAN_EQUAL
    MASTER
    NOT_EQUAL
    REPEAT
    THEN
    TRUE
    UNTIL
    WHEN
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> proc_declaration
Rule 2     proc_declaration -> PROC ID block SEMICOLON
Rule 3     block -> LPAREN statements RPAREN
Rule 4     statements -> statement
Rule 5     statements -> statements statement
Rule 6     statement -> variable_declaration SEMICOLON
Rule 7     statement -> variable_update SEMICOLON
Rule 8     statement -> alter_variable SEMICOLON
Rule 9     statement -> variable_with_alter SEMICOLON
Rule 10    statement -> variable_with_alterb SEMICOLON
Rule 11    statement -> signal_function SEMICOLON
Rule 12    statement -> view_signal_function SEMICOLON
Rule 13    statement -> is_true_function SEMICOLON
Rule 14    statement -> procedure_call SEMICOLON
Rule 15    statement -> print_statement SEMICOLON
Rule 16    variable_declaration -> NEW ID COMMA type_value
Rule 17    type_value -> LPAREN type COMMA expression RPAREN
Rule 18    type -> NUM
Rule 19    type -> BOOL
Rule 20    type -> STRING
Rule 21    expression -> value
Rule 22    expression -> ID
Rule 23    expression -> is_true_function
Rule 24    expression -> view_signal_function
Rule 25    expression -> expression ADD expression
Rule 26    expression -> expression SUB expression
Rule 27    expression -> expression MUL expression
Rule 28    expression -> expression DIV expression
Rule 29    expression -> expression REL_OP expression
Rule 30    value -> NUMBER
Rule 31    value -> BOOLEAN
Rule 32    value -> STRING
Rule 33    value -> LPAREN expression RPAREN
Rule 34    variable_update -> VALUES LPAREN ID COMMA expression RPAREN
Rule 35    alter_variable -> ALTER LPAREN ID COMMA operator COMMA NUMBER RPAREN
Rule 36    operator -> ADD
Rule 37    operator -> SUB
Rule 38    operator -> MUL
Rule 39    operator -> DIV
Rule 40    variable_with_alter -> VALUES LPAREN ID COMMA alter_variable RPAREN
Rule 41    variable_with_alterb -> ALTERB LPAREN ID RPAREN
Rule 42    signal_function -> SIGNAL LPAREN position_state COMMA position_state RPAREN
Rule 43    position_state -> expression
Rule 44    position_state -> ID
Rule 45    view_signal_function -> VIEWSIGNAL LPAREN position_state RPAREN
Rule 46    is_true_function -> ISTRUE LPAREN ID RPAREN
Rule 47    procedure_call -> CALL LPAREN RPAREN
Rule 48    print_statement -> PRINTVALUES LPAREN print_value_list RPAREN
Rule 49    print_value_list -> print_value
Rule 50    print_value_list -> print_value_list COMMA print_value
Rule 51    print_value -> STRING
Rule 52    print_value -> ID
Rule 53    print_value -> view_signal_function

Terminals, with rules where they appear

ADD                  : 25 36
ALTER                : 35
ALTERB               : 41
ARITH_OP             : 
AT                   : 
BOOL                 : 19
BOOLEAN              : 31
BREAK                : 
CALL                 : 47
CASE                 : 
COMMA                : 16 17 34 35 35 40 42 50
COMMENT              : 
DIV                  : 28 39
ELSE                 : 
EQUAL                : 
False                : 
GREATER_THAN         : 
GREATER_THAN_EQUAL   : 
ID                   : 2 16 22 34 35 40 41 44 46 52
ISTRUE               : 46
LESS_THAN            : 
LESS_THAN_EQUAL      : 
LPAREN               : 3 17 33 34 35 40 41 42 45 46 47 48
MASTER               : 
MUL                  : 27 38
NEW                  : 16
NOT_EQUAL            : 
NUM                  : 18
NUMBER               : 30 35
PRINTVALUES          : 48
PROC                 : 2
REL_OP               : 29
REPEAT               : 
RPAREN               : 3 17 33 34 35 40 41 42 45 46 47 48
SEMICOLON            : 2 6 7 8 9 10 11 12 13 14 15
SIGNAL               : 42
STRING               : 20 32 51
SUB                  : 26 37
THEN                 : 
TRUE                 : 
UNTIL                : 
VALUES               : 34 40
VIEWSIGNAL           : 45
WHEN                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

alter_variable       : 8 40
block                : 2
expression           : 17 25 25 26 26 27 27 28 28 29 29 33 34 43
is_true_function     : 13 23
operator             : 35
position_state       : 42 42 45
print_statement      : 15
print_value          : 49 50
print_value_list     : 48 50
proc_declaration     : 1
procedure_call       : 14
program              : 0
signal_function      : 11
statement            : 4 5
statements           : 3 5
type                 : 17
type_value           : 16
value                : 21
variable_declaration : 6
variable_update      : 7
variable_with_alter  : 9
variable_with_alterb : 10
view_signal_function : 12 24 53

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . proc_declaration
    (2) proc_declaration -> . PROC ID block SEMICOLON

    PROC            shift and go to state 3

    program                        shift and go to state 1
    proc_declaration               shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> proc_declaration .

    $end            reduce using rule 1 (program -> proc_declaration .)


state 3

    (2) proc_declaration -> PROC . ID block SEMICOLON

    ID              shift and go to state 4


state 4

    (2) proc_declaration -> PROC ID . block SEMICOLON
    (3) block -> . LPAREN statements RPAREN

    LPAREN          shift and go to state 6

    block                          shift and go to state 5

state 5

    (2) proc_declaration -> PROC ID block . SEMICOLON

    SEMICOLON       shift and go to state 7


state 6

    (3) block -> LPAREN . statements RPAREN
    (4) statements -> . statement
    (5) statements -> . statements statement
    (6) statement -> . variable_declaration SEMICOLON
    (7) statement -> . variable_update SEMICOLON
    (8) statement -> . alter_variable SEMICOLON
    (9) statement -> . variable_with_alter SEMICOLON
    (10) statement -> . variable_with_alterb SEMICOLON
    (11) statement -> . signal_function SEMICOLON
    (12) statement -> . view_signal_function SEMICOLON
    (13) statement -> . is_true_function SEMICOLON
    (14) statement -> . procedure_call SEMICOLON
    (15) statement -> . print_statement SEMICOLON
    (16) variable_declaration -> . NEW ID COMMA type_value
    (34) variable_update -> . VALUES LPAREN ID COMMA expression RPAREN
    (35) alter_variable -> . ALTER LPAREN ID COMMA operator COMMA NUMBER RPAREN
    (40) variable_with_alter -> . VALUES LPAREN ID COMMA alter_variable RPAREN
    (41) variable_with_alterb -> . ALTERB LPAREN ID RPAREN
    (42) signal_function -> . SIGNAL LPAREN position_state COMMA position_state RPAREN
    (45) view_signal_function -> . VIEWSIGNAL LPAREN position_state RPAREN
    (46) is_true_function -> . ISTRUE LPAREN ID RPAREN
    (47) procedure_call -> . CALL LPAREN RPAREN
    (48) print_statement -> . PRINTVALUES LPAREN print_value_list RPAREN

    NEW             shift and go to state 20
    VALUES          shift and go to state 21
    ALTER           shift and go to state 22
    ALTERB          shift and go to state 23
    SIGNAL          shift and go to state 24
    VIEWSIGNAL      shift and go to state 25
    ISTRUE          shift and go to state 26
    CALL            shift and go to state 27
    PRINTVALUES     shift and go to state 28

    statements                     shift and go to state 8
    statement                      shift and go to state 9
    variable_declaration           shift and go to state 10
    variable_update                shift and go to state 11
    alter_variable                 shift and go to state 12
    variable_with_alter            shift and go to state 13
    variable_with_alterb           shift and go to state 14
    signal_function                shift and go to state 15
    view_signal_function           shift and go to state 16
    is_true_function               shift and go to state 17
    procedure_call                 shift and go to state 18
    print_statement                shift and go to state 19

state 7

    (2) proc_declaration -> PROC ID block SEMICOLON .

    $end            reduce using rule 2 (proc_declaration -> PROC ID block SEMICOLON .)


state 8

    (3) block -> LPAREN statements . RPAREN
    (5) statements -> statements . statement
    (6) statement -> . variable_declaration SEMICOLON
    (7) statement -> . variable_update SEMICOLON
    (8) statement -> . alter_variable SEMICOLON
    (9) statement -> . variable_with_alter SEMICOLON
    (10) statement -> . variable_with_alterb SEMICOLON
    (11) statement -> . signal_function SEMICOLON
    (12) statement -> . view_signal_function SEMICOLON
    (13) statement -> . is_true_function SEMICOLON
    (14) statement -> . procedure_call SEMICOLON
    (15) statement -> . print_statement SEMICOLON
    (16) variable_declaration -> . NEW ID COMMA type_value
    (34) variable_update -> . VALUES LPAREN ID COMMA expression RPAREN
    (35) alter_variable -> . ALTER LPAREN ID COMMA operator COMMA NUMBER RPAREN
    (40) variable_with_alter -> . VALUES LPAREN ID COMMA alter_variable RPAREN
    (41) variable_with_alterb -> . ALTERB LPAREN ID RPAREN
    (42) signal_function -> . SIGNAL LPAREN position_state COMMA position_state RPAREN
    (45) view_signal_function -> . VIEWSIGNAL LPAREN position_state RPAREN
    (46) is_true_function -> . ISTRUE LPAREN ID RPAREN
    (47) procedure_call -> . CALL LPAREN RPAREN
    (48) print_statement -> . PRINTVALUES LPAREN print_value_list RPAREN

    RPAREN          shift and go to state 29
    NEW             shift and go to state 20
    VALUES          shift and go to state 21
    ALTER           shift and go to state 22
    ALTERB          shift and go to state 23
    SIGNAL          shift and go to state 24
    VIEWSIGNAL      shift and go to state 25
    ISTRUE          shift and go to state 26
    CALL            shift and go to state 27
    PRINTVALUES     shift and go to state 28

    statement                      shift and go to state 30
    variable_declaration           shift and go to state 10
    variable_update                shift and go to state 11
    alter_variable                 shift and go to state 12
    variable_with_alter            shift and go to state 13
    variable_with_alterb           shift and go to state 14
    signal_function                shift and go to state 15
    view_signal_function           shift and go to state 16
    is_true_function               shift and go to state 17
    procedure_call                 shift and go to state 18
    print_statement                shift and go to state 19

state 9

    (4) statements -> statement .

    RPAREN          reduce using rule 4 (statements -> statement .)
    NEW             reduce using rule 4 (statements -> statement .)
    VALUES          reduce using rule 4 (statements -> statement .)
    ALTER           reduce using rule 4 (statements -> statement .)
    ALTERB          reduce using rule 4 (statements -> statement .)
    SIGNAL          reduce using rule 4 (statements -> statement .)
    VIEWSIGNAL      reduce using rule 4 (statements -> statement .)
    ISTRUE          reduce using rule 4 (statements -> statement .)
    CALL            reduce using rule 4 (statements -> statement .)
    PRINTVALUES     reduce using rule 4 (statements -> statement .)


state 10

    (6) statement -> variable_declaration . SEMICOLON

    SEMICOLON       shift and go to state 31


state 11

    (7) statement -> variable_update . SEMICOLON

    SEMICOLON       shift and go to state 32


state 12

    (8) statement -> alter_variable . SEMICOLON

    SEMICOLON       shift and go to state 33


state 13

    (9) statement -> variable_with_alter . SEMICOLON

    SEMICOLON       shift and go to state 34


state 14

    (10) statement -> variable_with_alterb . SEMICOLON

    SEMICOLON       shift and go to state 35


state 15

    (11) statement -> signal_function . SEMICOLON

    SEMICOLON       shift and go to state 36


state 16

    (12) statement -> view_signal_function . SEMICOLON

    SEMICOLON       shift and go to state 37


state 17

    (13) statement -> is_true_function . SEMICOLON

    SEMICOLON       shift and go to state 38


state 18

    (14) statement -> procedure_call . SEMICOLON

    SEMICOLON       shift and go to state 39


state 19

    (15) statement -> print_statement . SEMICOLON

    SEMICOLON       shift and go to state 40


state 20

    (16) variable_declaration -> NEW . ID COMMA type_value

    ID              shift and go to state 41


state 21

    (34) variable_update -> VALUES . LPAREN ID COMMA expression RPAREN
    (40) variable_with_alter -> VALUES . LPAREN ID COMMA alter_variable RPAREN

    LPAREN          shift and go to state 42


state 22

    (35) alter_variable -> ALTER . LPAREN ID COMMA operator COMMA NUMBER RPAREN

    LPAREN          shift and go to state 43


state 23

    (41) variable_with_alterb -> ALTERB . LPAREN ID RPAREN

    LPAREN          shift and go to state 44


state 24

    (42) signal_function -> SIGNAL . LPAREN position_state COMMA position_state RPAREN

    LPAREN          shift and go to state 45


state 25

    (45) view_signal_function -> VIEWSIGNAL . LPAREN position_state RPAREN

    LPAREN          shift and go to state 46


state 26

    (46) is_true_function -> ISTRUE . LPAREN ID RPAREN

    LPAREN          shift and go to state 47


state 27

    (47) procedure_call -> CALL . LPAREN RPAREN

    LPAREN          shift and go to state 48


state 28

    (48) print_statement -> PRINTVALUES . LPAREN print_value_list RPAREN

    LPAREN          shift and go to state 49


state 29

    (3) block -> LPAREN statements RPAREN .

    SEMICOLON       reduce using rule 3 (block -> LPAREN statements RPAREN .)


state 30

    (5) statements -> statements statement .

    RPAREN          reduce using rule 5 (statements -> statements statement .)
    NEW             reduce using rule 5 (statements -> statements statement .)
    VALUES          reduce using rule 5 (statements -> statements statement .)
    ALTER           reduce using rule 5 (statements -> statements statement .)
    ALTERB          reduce using rule 5 (statements -> statements statement .)
    SIGNAL          reduce using rule 5 (statements -> statements statement .)
    VIEWSIGNAL      reduce using rule 5 (statements -> statements statement .)
    ISTRUE          reduce using rule 5 (statements -> statements statement .)
    CALL            reduce using rule 5 (statements -> statements statement .)
    PRINTVALUES     reduce using rule 5 (statements -> statements statement .)


state 31

    (6) statement -> variable_declaration SEMICOLON .

    RPAREN          reduce using rule 6 (statement -> variable_declaration SEMICOLON .)
    NEW             reduce using rule 6 (statement -> variable_declaration SEMICOLON .)
    VALUES          reduce using rule 6 (statement -> variable_declaration SEMICOLON .)
    ALTER           reduce using rule 6 (statement -> variable_declaration SEMICOLON .)
    ALTERB          reduce using rule 6 (statement -> variable_declaration SEMICOLON .)
    SIGNAL          reduce using rule 6 (statement -> variable_declaration SEMICOLON .)
    VIEWSIGNAL      reduce using rule 6 (statement -> variable_declaration SEMICOLON .)
    ISTRUE          reduce using rule 6 (statement -> variable_declaration SEMICOLON .)
    CALL            reduce using rule 6 (statement -> variable_declaration SEMICOLON .)
    PRINTVALUES     reduce using rule 6 (statement -> variable_declaration SEMICOLON .)


state 32

    (7) statement -> variable_update SEMICOLON .

    RPAREN          reduce using rule 7 (statement -> variable_update SEMICOLON .)
    NEW             reduce using rule 7 (statement -> variable_update SEMICOLON .)
    VALUES          reduce using rule 7 (statement -> variable_update SEMICOLON .)
    ALTER           reduce using rule 7 (statement -> variable_update SEMICOLON .)
    ALTERB          reduce using rule 7 (statement -> variable_update SEMICOLON .)
    SIGNAL          reduce using rule 7 (statement -> variable_update SEMICOLON .)
    VIEWSIGNAL      reduce using rule 7 (statement -> variable_update SEMICOLON .)
    ISTRUE          reduce using rule 7 (statement -> variable_update SEMICOLON .)
    CALL            reduce using rule 7 (statement -> variable_update SEMICOLON .)
    PRINTVALUES     reduce using rule 7 (statement -> variable_update SEMICOLON .)


state 33

    (8) statement -> alter_variable SEMICOLON .

    RPAREN          reduce using rule 8 (statement -> alter_variable SEMICOLON .)
    NEW             reduce using rule 8 (statement -> alter_variable SEMICOLON .)
    VALUES          reduce using rule 8 (statement -> alter_variable SEMICOLON .)
    ALTER           reduce using rule 8 (statement -> alter_variable SEMICOLON .)
    ALTERB          reduce using rule 8 (statement -> alter_variable SEMICOLON .)
    SIGNAL          reduce using rule 8 (statement -> alter_variable SEMICOLON .)
    VIEWSIGNAL      reduce using rule 8 (statement -> alter_variable SEMICOLON .)
    ISTRUE          reduce using rule 8 (statement -> alter_variable SEMICOLON .)
    CALL            reduce using rule 8 (statement -> alter_variable SEMICOLON .)
    PRINTVALUES     reduce using rule 8 (statement -> alter_variable SEMICOLON .)


state 34

    (9) statement -> variable_with_alter SEMICOLON .

    RPAREN          reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)
    NEW             reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)
    VALUES          reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)
    ALTER           reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)
    ALTERB          reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)
    SIGNAL          reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)
    VIEWSIGNAL      reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)
    ISTRUE          reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)
    CALL            reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)
    PRINTVALUES     reduce using rule 9 (statement -> variable_with_alter SEMICOLON .)


state 35

    (10) statement -> variable_with_alterb SEMICOLON .

    RPAREN          reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)
    NEW             reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)
    VALUES          reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)
    ALTER           reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)
    ALTERB          reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)
    SIGNAL          reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)
    VIEWSIGNAL      reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)
    ISTRUE          reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)
    CALL            reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)
    PRINTVALUES     reduce using rule 10 (statement -> variable_with_alterb SEMICOLON .)


state 36

    (11) statement -> signal_function SEMICOLON .

    RPAREN          reduce using rule 11 (statement -> signal_function SEMICOLON .)
    NEW             reduce using rule 11 (statement -> signal_function SEMICOLON .)
    VALUES          reduce using rule 11 (statement -> signal_function SEMICOLON .)
    ALTER           reduce using rule 11 (statement -> signal_function SEMICOLON .)
    ALTERB          reduce using rule 11 (statement -> signal_function SEMICOLON .)
    SIGNAL          reduce using rule 11 (statement -> signal_function SEMICOLON .)
    VIEWSIGNAL      reduce using rule 11 (statement -> signal_function SEMICOLON .)
    ISTRUE          reduce using rule 11 (statement -> signal_function SEMICOLON .)
    CALL            reduce using rule 11 (statement -> signal_function SEMICOLON .)
    PRINTVALUES     reduce using rule 11 (statement -> signal_function SEMICOLON .)


state 37

    (12) statement -> view_signal_function SEMICOLON .

    RPAREN          reduce using rule 12 (statement -> view_signal_function SEMICOLON .)
    NEW             reduce using rule 12 (statement -> view_signal_function SEMICOLON .)
    VALUES          reduce using rule 12 (statement -> view_signal_function SEMICOLON .)
    ALTER           reduce using rule 12 (statement -> view_signal_function SEMICOLON .)
    ALTERB          reduce using rule 12 (statement -> view_signal_function SEMICOLON .)
    SIGNAL          reduce using rule 12 (statement -> view_signal_function SEMICOLON .)
    VIEWSIGNAL      reduce using rule 12 (statement -> view_signal_function SEMICOLON .)
    ISTRUE          reduce using rule 12 (statement -> view_signal_function SEMICOLON .)
    CALL            reduce using rule 12 (statement -> view_signal_function SEMICOLON .)
    PRINTVALUES     reduce using rule 12 (statement -> view_signal_function SEMICOLON .)


state 38

    (13) statement -> is_true_function SEMICOLON .

    RPAREN          reduce using rule 13 (statement -> is_true_function SEMICOLON .)
    NEW             reduce using rule 13 (statement -> is_true_function SEMICOLON .)
    VALUES          reduce using rule 13 (statement -> is_true_function SEMICOLON .)
    ALTER           reduce using rule 13 (statement -> is_true_function SEMICOLON .)
    ALTERB          reduce using rule 13 (statement -> is_true_function SEMICOLON .)
    SIGNAL          reduce using rule 13 (statement -> is_true_function SEMICOLON .)
    VIEWSIGNAL      reduce using rule 13 (statement -> is_true_function SEMICOLON .)
    ISTRUE          reduce using rule 13 (statement -> is_true_function SEMICOLON .)
    CALL            reduce using rule 13 (statement -> is_true_function SEMICOLON .)
    PRINTVALUES     reduce using rule 13 (statement -> is_true_function SEMICOLON .)


state 39

    (14) statement -> procedure_call SEMICOLON .

    RPAREN          reduce using rule 14 (statement -> procedure_call SEMICOLON .)
    NEW             reduce using rule 14 (statement -> procedure_call SEMICOLON .)
    VALUES          reduce using rule 14 (statement -> procedure_call SEMICOLON .)
    ALTER           reduce using rule 14 (statement -> procedure_call SEMICOLON .)
    ALTERB          reduce using rule 14 (statement -> procedure_call SEMICOLON .)
    SIGNAL          reduce using rule 14 (statement -> procedure_call SEMICOLON .)
    VIEWSIGNAL      reduce using rule 14 (statement -> procedure_call SEMICOLON .)
    ISTRUE          reduce using rule 14 (statement -> procedure_call SEMICOLON .)
    CALL            reduce using rule 14 (statement -> procedure_call SEMICOLON .)
    PRINTVALUES     reduce using rule 14 (statement -> procedure_call SEMICOLON .)


state 40

    (15) statement -> print_statement SEMICOLON .

    RPAREN          reduce using rule 15 (statement -> print_statement SEMICOLON .)
    NEW             reduce using rule 15 (statement -> print_statement SEMICOLON .)
    VALUES          reduce using rule 15 (statement -> print_statement SEMICOLON .)
    ALTER           reduce using rule 15 (statement -> print_statement SEMICOLON .)
    ALTERB          reduce using rule 15 (statement -> print_statement SEMICOLON .)
    SIGNAL          reduce using rule 15 (statement -> print_statement SEMICOLON .)
    VIEWSIGNAL      reduce using rule 15 (statement -> print_statement SEMICOLON .)
    ISTRUE          reduce using rule 15 (statement -> print_statement SEMICOLON .)
    CALL            reduce using rule 15 (statement -> print_statement SEMICOLON .)
    PRINTVALUES     reduce using rule 15 (statement -> print_statement SEMICOLON .)


state 41

    (16) variable_declaration -> NEW ID . COMMA type_value

    COMMA           shift and go to state 50


state 42
